--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "bluebird": "^3.0.0",
     "cron": "^1.0.3",
+    "node-inspector": "^0.12.5",
+    "nodemon": "^1.8.1",
     "request": "^2.34.0",
     "underscore": "^1.6.0"
   },
